# transcriber

./: README  README_UNIX  README_WINDOWS  README_WINDOWS.txt
arabic/: ApiTrans.tcl  Arabic.tcl  Edit.tcl  Events.tcl  Undo.tcl  fonts.alias  fonts.dir  yarb20_uni.bdf
contrib/html_library-0.3/: README  pkgIndex.tcl  sample.tcl
contrib/html_library-0.3/html/: bugs.html  changes.html  forms.html  help.html  interface.html  man.html  sample.html  summary.html
convert/: README  cha.tcl  ctm.tcl  html.tcl  hub4e96.tcl  lbl.tcl  lola.tcl  mdtm.tcl  sclite.tcl  sdt.tcl  stm.tcl  text.tcl  timit.tcl  typ.tcl  xwaves.tcl
debian/: NIST.diff  README.debian  changelog  conffiles  control  copyright  dirs  doc-base  links  menu  postinst  postrm  prerm  rules  trans.1  transciber.docs
demo/: README  frint980428.trs  know.sph  know.trs
doc/: Index.html  IndexDe.html  IndexFr.html
doc/de/: about.html  banner.html  contact.html  credits.html  distribution.html  doc_local.html  frame_local.html  frame_web.html  functions.html  history.html  inst_13b7.html  inst_141.html  installation.html  menu_local.html  menu_web.html  present_local.html  present_web.html  refMenu.html  reference.html  todo.html  user.html  userDe.html  userFrame.html
doc/en/: about.html  banner.html  contact.html  credits.html  download.html  download142.html  download143.html  faq.html  formats.html  frame_local.html  frame_web.html  functions.html  history.html  inst_141.html  inst_142.html  installation.html  map.html  menu_local.html  menu_web.html  present_local.html  present_web.html  publications.html  refFrame.html  refMenu.html  reference.html  sample.xml  todo.html  user.html
doc/fr/: about.html  banner.html  credits.html  frame_local.html  functions.html  menu_local.html  menu_web.html  present_local.html  present_web.html  refFrame.html  refMenu.html  reference.html  user.html  userMenu.html
doc/img/: trans.xpm
doc/lrec/: lrec.html
etc/: beep.au  default.txt  local.txt  local_cs.txt  local_fr.txt  trans-cha.dtd
img/: cut.xbm  paste.xbm
src/: Makefile.in  axis.c  configure  configure.in  patch_sphere  segmt.c  trans.c  trans.h  trans.in  transar.in  wavfm.c
src/mac/: MW_TransHeaders.pch  dpwe_compat.c  snack.mcp.hqx  tcLex.mcp.hqx  trans.mcp.hqx  trans.r
tcl/: About.tcl  BgShape.tcl  ComputeShape.tcl  Debug.tcl  Dialog.tcl  Edit.tcl  Episode.tcl  Events.tcl  Explorer.tcl  Interface.tcl  Main.tcl  Menu.tcl  MultiWav.tcl  NamedEntities.tcl  Play.tcl  Segmt.tcl  Signal.tcl  Socket.tcl  SoundServer.tcl  Speaker.tcl  Spelling.tcl  Synchro.tcl  Topic.tcl  Trans.tcl  Undo.tcl  Waveform.tcl  Xml.tcl  XmlDtd.tcl  XmlItem.tcl  XmlParse.tcl
themes/classic/: default.txt
themes/classic/img/: copy.xbm
themes/clean/: default.txt
